--- a/environment.yml
+++ b/environment.yml
@@ -1,43 +1,155 @@
 name: fyp
 channels:
-  - conda-forge
+  - intel
   - anaconda
+  - conda-forge
   - defaults
 dependencies:
+  - argon2-cffi=20.1.0=py39hb82d6ee_2
+  - async_generator=1.10=py_0
+  - attrs=21.2.0=pyhd8ed1ab_0
+  - backcall=0.2.0=pyh9f0ad1d_0
+  - backports=1.0=py_2
+  - backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
+  - blas=1.0=mkl
+  - bleach=3.3.0=pyh44b312d_0
   - brotlipy=0.7.0=py39h2bbff1b_1003
-  - ca-certificates=2020.10.14=0
+  - ca-certificates=2020.12.5=h5b45459_0
   - certifi=2020.12.5=py39hcbf5309_1
   - cffi=1.14.5=py39hcd4344a_0
   - chardet=3.0.4=py39haa95532_1003
   - click=7.1.2=py_0
+  - colorama=0.4.4=pyh9f0ad1d_0
   - cryptography=3.4.7=py39h71e12ea_0
+  - decorator=5.0.9=pyhd8ed1ab_0
+  - defusedxml=0.7.1=pyhd8ed1ab_0
+  - entrypoints=0.3=pyhd8ed1ab_1003
+  - flake8=3.9.2=pyhd8ed1ab_0
   - flask=1.1.2=py_0
   - flask-cors=3.0.9=py_0
+  - icc_rt=2020.3=intel_311
   - idna=2.10=py_0
+  - importlib-metadata=4.3.0=py39hcbf5309_0
+  - intel-openmp=2021.2.0=haa95532_616
+  - ipykernel=5.5.5=py39h832f523_0
+  - ipython=7.23.1=py39h832f523_0
+  - ipython_genutils=0.2.0=py_1
   - itsdangerous=1.1.0=py_0
+  - jedi=0.18.0=py39hcbf5309_2
   - jinja2=2.11.2=py_0
+  - joblib=1.0.1=pyhd3eb1b0_0
+  - jsonschema=3.2.0=pyhd8ed1ab_3
+  - jupyter_client=6.1.12=pyhd8ed1ab_0
+  - jupyter_core=4.7.1=py39hcbf5309_0
+  - jupyterlab_pygments=0.1.2=pyh9f0ad1d_0
+  - libsodium=1.0.18=h8d14728_1
+  - m2w64-gcc-libgfortran=5.3.0=6
+  - m2w64-gcc-libs=5.3.0=7
+  - m2w64-gcc-libs-core=5.3.0=7
+  - m2w64-gmp=6.1.0=2
+  - m2w64-libwinpthread-git=5.0.0.4634.697f757=2
   - markupsafe=2.0.1=py39h2bbff1b_0
+  - matplotlib-inline=0.1.2=pyhd8ed1ab_2
+  - mccabe=0.6.1=py_1
+  - mistune=0.8.4=py39hb82d6ee_1003
+  - mkl=2021.2.0=haa95532_296
+  - mkl-service=2.3.0=py39h2bbff1b_1
+  - mkl_fft=1.3.0=py39h277e83a_2
+  - mkl_random=1.2.1=py39hf11a4ad_2
+  - msys2-conda-epoch=20160418=1
+  - nbclient=0.5.3=pyhd8ed1ab_0
+  - nbconvert=6.0.7=py39hcbf5309_3
+  - nbformat=5.1.3=pyhd8ed1ab_0
+  - nest-asyncio=1.5.1=pyhd8ed1ab_0
+  - notebook=6.4.0=pyha770c72_0
+  - numpy-base=1.20.2=py39hc2deb75_0
   - openssl=1.1.1k=h8ffe710_0
+  - packaging=20.9=pyh44b312d_0
+  - pandas=1.2.4=py39hd77b12b_0
+  - pandoc=2.13=h8ffe710_0
+  - pandocfilters=1.4.2=py_1
+  - parso=0.8.2=pyhd8ed1ab_0
+  - pickleshare=0.7.5=py_1003
   - pip=21.0.1=py39haa95532_0
+  - prometheus_client=0.10.1=pyhd8ed1ab_0
+  - prompt-toolkit=3.0.18=pyha770c72_0
+  - pycodestyle=2.7.0=pyhd8ed1ab_0
   - pycparser=2.20=py_2
   - pycryptodome=3.10.1=py39hb82d6ee_0
+  - pyflakes=2.3.1=pyhd8ed1ab_0
+  - pygments=2.9.0=pyhd8ed1ab_0
+  - pymongo=3.11.4=py39hd77b12b_0
   - pyopenssl=19.1.0=py_1
+  - pyparsing=2.4.7=pyh9f0ad1d_0
+  - pyrsistent=0.17.3=py39hb82d6ee_2
   - pysocks=1.7.1=py39haa95532_0
   - python=3.9.4=h6244533_0
+  - python-dateutil=2.8.1=pyhd3eb1b0_0
   - python_abi=3.9=1_cp39
+  - pytz=2021.1=pyhd3eb1b0_0
+  - pywin32=300=py39hb82d6ee_0
+  - pywinpty=0.5.7=py39haa95532_0
+  - pyzmq=22.1.0=py39he46f08e_0
   - requests=2.24.0=py_0
+  - scikit-learn=0.24.2=py39hf11a4ad_0
+  - scipy=1.6.2=py39h66253e8_1
+  - send2trash=1.5.0=py_0
   - setuptools=52.0.0=py39haa95532_0
   - sqlite=3.35.4=h2bbff1b_0
+  - terminado=0.9.4=py39haa95532_0
+  - testpath=0.5.0=pyhd8ed1ab_0
+  - threadpoolctl=2.1.0=pyh5ca1d4c_0
+  - tornado=6.1=py39hb82d6ee_1
+  - traitlets=5.0.5=py_0
   - tzdata=2020f=h52ac0ba_0
   - urllib3=1.25.11=py_0
   - vc=14.2=h21ff451_1
   - vs2015_runtime=14.27.29016=h5e58377_2
+  - wcwidth=0.2.5=pyh9f0ad1d_2
+  - webencodings=0.5.1=py_1
   - werkzeug=1.0.1=py_0
   - wheel=0.36.2=pyhd3eb1b0_0
   - win_inet_pton=1.1.0=py39haa95532_0
   - wincertstore=0.2=py39h2bbff1b_0
+  - winpty=0.4.3=4
+  - zeromq=4.3.4=h0e60522_0
+  - zipp=3.4.1=pyhd8ed1ab_0
   - pip:
+    - absl-py==0.12.0
     - anytree==2.8.0
+    - astunparse==1.6.3
+    - cachetools==4.2.2
+    - dnspython==2.1.0
+    - easyprocess==0.3
+    - entrypoint2==0.2.4
+    - flatbuffers==1.12
     - future-fstrings==1.2.0
-    - six==1.16.0
-prefix: C:\Users\prana\anaconda3\envs\fyp
+    - gast==0.4.0
+    - google-auth==1.30.1
+    - google-auth-oauthlib==0.4.4
+    - google-pasta==0.2.0
+    - grpcio==1.34.1
+    - h5py==3.1.0
+    - keras-nightly==2.5.0.dev2021032900
+    - keras-preprocessing==1.1.2
+    - markdown==3.3.4
+    - numpy==1.19.5
+    - oauthlib==3.1.0
+    - opt-einsum==3.3.0
+    - protobuf==3.17.1
+    - pyasn1==0.4.8
+    - pyasn1-modules==0.2.8
+    - pyunpack==0.2.2
+    - requests-oauthlib==1.3.0
+    - rsa==4.7.2
+    - six==1.15.0
+    - tensorboard==2.5.0
+    - tensorboard-data-server==0.6.1
+    - tensorboard-plugin-wit==1.8.0
+    - tensorflow==2.5.0
+    - tensorflow-estimator==2.5.0
+    - termcolor==1.1.0
+    - typing-extensions==3.7.4.3
+    - wget==3.2
+    - wrapt==1.12.1
+prefix: D:\Softwares\anaconda3\envs\fyp
